# parallel-mandelbrot

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.sh  build.sh  main.cpp  mandelbrot.cpp  requirements.txt  visualize.py  visualize_opengl.py
.github/workflows/: build.yaml
advisor/: .gitignore  advisor.sh
advisor/results/: avx2_dp_O0-PRECISE.csv  avx2_dp_O0-STRICT.csv  avx2_dp_O0.csv  avx2_dp_O1-PRECISE.csv  avx2_dp_O1-STRICT.csv  avx2_dp_O1.csv  avx2_dp_O2-PRECISE.csv  avx2_dp_O2-STRICT.csv  avx2_dp_O2.csv  avx2_dp_O3-PRECISE.csv  avx2_dp_O3-STRICT.csv  avx2_dp_O3.csv  avx2_dp_optimized_O0-PRECISE.csv  avx2_dp_optimized_O0-STRICT.csv  avx2_dp_optimized_O0.csv  avx2_dp_optimized_O1-PRECISE.csv  avx2_dp_optimized_O1-STRICT.csv  avx2_dp_optimized_O1.csv  avx2_dp_optimized_O2-PRECISE.csv  avx2_dp_optimized_O2-STRICT.csv  avx2_dp_optimized_O2.csv  avx2_dp_optimized_O3-PRECISE.csv  avx2_dp_optimized_O3-STRICT.csv  avx2_dp_optimized_O3.csv  avx2_sp_O0-PRECISE.csv  avx2_sp_O0-STRICT.csv  avx2_sp_O0.csv  avx2_sp_O1-PRECISE.csv  avx2_sp_O1-STRICT.csv  avx2_sp_O1.csv  avx2_sp_O2-PRECISE.csv  avx2_sp_O2-STRICT.csv  avx2_sp_O2.csv  avx2_sp_O3-PRECISE.csv  avx2_sp_O3-STRICT.csv  avx2_sp_O3.csv  avx2_sp_optimized_O0-PRECISE.csv  avx2_sp_optimized_O0-STRICT.csv  avx2_sp_optimized_O0.csv  avx2_sp_optimized_O1-PRECISE.csv  (+152 more)
benchmarks/: .gitignore  benchmark.csv  benchmark.py  benchmark.sh  generate_plots.py  run_benshmarks.sh
gpu/cuda/: CMakeLists.txt  cuda_dp.cu  cuda_sp.cu
gpu/rocm/: CMakeLists.txt  rocm_dp.cpp  rocm_dp.hip  rocm_dp_tiled.hip  rocm_sp.cpp  rocm_sp.hip  rocm_sp_tiled.cpp  rocm_sp_tiled.hip
gpu/sycl/: CMakeLists.txt  INSTALL.md  sycl_dp.cpp  sycl_sp.cpp
gpu_benchmarks/: benchmark.py  plots.py
gpu_benchmarks/data/: combined.csv
include/: mandelbrot.hpp
result_compare/: compare.py  generate_results.sh
src/: CMakeLists.txt  avx2_dp.cpp  avx2_dp_optimized.cpp  avx2_sp.cpp  avx2_sp_optimized.cpp  baseline.cpp  baseline_dp.cpp  baseline_sp.cpp  dynamic_multithreading.cpp  dynamic_multithreading_dp.cpp  dynamic_multithreading_dp_simd.cpp  dynamic_multithreading_simd_optimized_dp.cpp  dynamic_multithreading_simd_optimized_sp.cpp  dynamic_multithreading_sp.cpp  dynamic_multithreading_sp_simd.cpp  no_complex.cpp  no_complex_dp.cpp  no_complex_dp_simd.cpp  no_complex_sp.cpp  no_complex_sp_simd.cpp  static_multithreading.cpp  static_multithreading_dp.cpp  static_multithreading_sp.cpp
